# playground

./: CMakeLists.txt  Dockerfile  README.md  cpc  main.cpp  vg
booker/: CMakeLists.txt  booking.cpp  parser.cpp  server.cpp  session.cpp
booker/include/: booking.h  customcli.h  parser.h  server.h  session.h
doc/: README.md
doc/doxy/: doxyfile.doxygen
playd/: CMakeLists.txt  main.cpp  version.h.in
src/: CMakeLists.txt  booker.h  booking.cpp  booking.h  customcli.h  example.cpp  parser.cpp  parser.h  server.cpp  server.h  session.cpp  session.h
test/: CMakeLists.txt  booking.cpp  booking_test.cpp  parser_test.cpp
